--- a/configurableMenu@lestcape/locale/cs_CZ.po
+++ b/configurableMenu@lestcape/locale/cs_CZ.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-03 10:28-0600\n"
+"PO-Revision-Date: 2014-05-17 21:58-0600\n"
 "Last-Translator: Libor Schejbal <libor.schejbal@gmail.com>\n"
 "Language-Team: Eliermi Cunha Junior <jpegrande@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -311,7 +311,7 @@ msgid "Horizontal Grid"
 msgstr "Horizontální mřížka"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
-msgid "Vertical Only"
+msgid "Vertical Icon"
 msgstr "Vertikální"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
@@ -327,7 +327,7 @@ msgid "Vertical Grid"
 msgstr "Vertikální mřížka"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
-msgid "Horizontal Only"
+msgid "Horizontal Icon"
 msgstr "Horizontální"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
