--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,6 +1,6 @@
-Cinnamon Applet: Configurable Menu Version: v1.1-Beta
+Cinnamon Applet: Configurable Menu Version: v1.2-Beta
 
-Last version release date: 18 May 2014
+Last version release date: 25 May 2014
 ***
 Authors: Lester Carballo Pérez (https://github.com/lestcape) and Garibaldo (https://github.com/Garibaldo).
 Contact: lestcape@gmail.com
@@ -72,6 +72,13 @@ https://github.com/lestcape/Cinnamon-Installer
 Change log
 --------------
 See a complete Change log : https://github.com/lestcape/Configurable-Menu/wiki/Change-Log.
+
+1.2-Beta
+   - Was added kicker Menu layout.
+   - Fixed several bugs on Gnome Classic layout.
+   - Blocked the opening of applications, when the menu is resized.
+   - Allow only show the arrow on the category when selected the category.
+   - Improve on the resize option.
 
 1.1-Beta
    - Was added Chinese language(Zh_Cn) thanks Highwind.
