--- a/configurableMenu@lestcape/locale/fr.po
+++ b/configurableMenu@lestcape/locale/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-17 21:58-0600\n"
+"PO-Revision-Date: 2014-05-25 09:02-0600\n"
 "Last-Translator: Dupo <dupop35@yahoo.fr>\n"
 "Language-Team: Dupo <dupop35@yahoo.fr>\n"
 "MIME-Version: 1.0\n"
@@ -759,6 +759,15 @@ msgstr "Afficher la flèche sur les catégories"
 #. configurableMenu@lestcape->settings-schema.json->arrow-categories->tooltip
 msgid "Choose whether or not to show the arrow on the categories."
 msgstr "Afficher ou non la flèche sur les catégories."
+
+#. configurableMenu@lestcape->settings-schema.json->arrow-categories-selected->description
+msgid "Only show arrow when selected category"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->arrow-categories-selected->tooltip
+msgid ""
+"Choose whether or not to only show the arrow when selected the category."
+msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->show-app-
 #. description->description
