--- a/configurableMenu@lestcape/locale/cs_CZ.po
+++ b/configurableMenu@lestcape/locale/cs_CZ.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-25 09:02-0600\n"
+"PO-Revision-Date: 2014-05-25 10:22-0600\n"
 "Last-Translator: Libor Schejbal <libor.schejbal@gmail.com>\n"
-"Language-Team: Eliermi Cunha Junior <jpegrande@gmail.com>\n"
+"Language-Team: Libor Schejbal <libor.schejbal@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -761,12 +761,12 @@ msgstr "Zvolte, zda se mají či nemají zobrazovat šipky v kategoriích."
 
 #. configurableMenu@lestcape->settings-schema.json->arrow-categories-selected->description
 msgid "Only show arrow when selected category"
-msgstr ""
+msgstr "Zobrazit šipku pouze při výběru kategorie"
 
 #. configurableMenu@lestcape->settings-schema.json->arrow-categories-selected->tooltip
 msgid ""
 "Choose whether or not to only show the arrow when selected the category."
-msgstr ""
+msgstr "Zvolte, zda se má šipka zobrazit jen při výběru kategorie."
 
 #. configurableMenu@lestcape->settings-schema.json->show-app-
 #. description->description
