Improve the removable drive alaing accessible application and places.

--- a/configurableMenu@lestcape/locale/default.po
+++ b/configurableMenu@lestcape/locale/default.po
@@ -529,6 +529,10 @@ msgid "Whisker"
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
+msgid "Kicker"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Dragon"
 msgstr ""
 
