--- a/configurableMenu@lestcape/locale/es.po
+++ b/configurableMenu@lestcape/locale/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-25 09:02-0600\n"
+"PO-Revision-Date: 2014-05-26 09:54-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -543,6 +543,10 @@ msgstr "Gnome Clásico"
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Whisker"
 msgstr "Whisker"
+
+#. configurableMenu@lestcape->settings-schema.json->theme->options
+msgid "Kicker"
+msgstr "Kicker"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Dragon"
