--- a/configurableMenu@lestcape/locale/zh_CN.po
+++ b/configurableMenu@lestcape/locale/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-25 11:49-0600\n"
+"PO-Revision-Date: 2014-05-26 09:54-0600\n"
 "Last-Translator: highwind <highwindmx@126.com>\n"
 "Language-Team: highwind <highwindmx@126.com>\n"
 "MIME-Version: 1.0\n"
@@ -527,6 +527,10 @@ msgstr "Classic Gnome"
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Whisker"
 msgstr "Whisker"
+
+#. configurableMenu@lestcape->settings-schema.json->theme->options
+msgid "Kicker"
+msgstr "Kicker"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Dragon"
