--- a/configurableMenu@lestcape/locale/es.po
+++ b/configurableMenu@lestcape/locale/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-26 09:54-0600\n"
+"PO-Revision-Date: 2014-05-30 18:06-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -997,3 +997,14 @@ msgstr "Desinstalar la herramienta Cinnamon Installer"
 msgid "Press this button to uninstall the Cinnamon Installer tool."
 msgstr ""
 "Presione este botón para desinstalar la herramienta Cinnamon Installer."
+
+#. configurableMenu@lestcape->settings-schema.json->installer-default->description
+msgid "Enable the default Cinnamon packages manager tools"
+msgstr ""
+"Habilitar las herramientas del administrador de paquetes por defecto de "
+"canela"
+
+#. configurableMenu@lestcape->settings-schema.json->installer-default->tooltip
+msgid "Allows the use of the default packages manager(only if it's available)."
+msgstr ""
+"Permite el uso del gestor de paquetes por defecto (sólo si está disponible)."
