--- a/configurableMenu@lestcape/locale/pt_BR.po
+++ b/configurableMenu@lestcape/locale/pt_BR.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-05-30 18:06-0600\n"
-"Last-Translator: Eliermi Cunha Junior <jpegrande@gmailcom>\n"
+"PO-Revision-Date: 2014-05-31 15:10-0600\n"
+"Last-Translator: Eliermi Cunha Junior <jpegrande@gmail.com>\n"
 "Language-Team: Eliermi Cunha Junior <jpegrande@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -971,8 +971,10 @@ msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->installer-default->description
 msgid "Enable the default Cinnamon packages manager tools"
-msgstr ""
+msgstr "Ativar as ferramentas de gerenciamento de pacotes padrão de Cinnamon"
 
 #. configurableMenu@lestcape->settings-schema.json->installer-default->tooltip
 msgid "Allows the use of the default packages manager(only if it's available)."
 msgstr ""
+"Permite o uso do gerenciador de pacotes padrão (somente se estiver "
+"disponível)."
